--- a/src/bunit.template/template/Company.BlazorTests1.csproj
+++ b/src/bunit.template/template/Company.BlazorTests1.csproj
@@ -9,22 +9,39 @@
 	<ItemGroup>
 		<Using Include="Bunit" />
 		<Using Include="Bunit.TestDoubles" />
-		<Using Include="Xunit" />
 		<Using Include="Microsoft.Extensions.DependencyInjection" />
+		<Using Include="Xunit" Condition="'$(testFramework_xunit)' == 'true'"/>
+		<Using Include="NUnit.Framework" Condition="'$(testFramework_nunit)' == 'true'"/>
+		<Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" Condition="'$(testFramework_mstest)' == 'true'"/>
+
+		<Using Include="Bunit.TestContext" Alias="TestContext" />
 	</ItemGroup>
 
 	<ItemGroup>
-    <PackageReference Include="bunit" Version="#{NBGV_NuGetPackageVersion}#" />
+		<PackageReference Include="bunit" Version="#{NBGV_NuGetPackageVersion}#" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+		<PackageReference Include="coverlet.collector" Version="3.1.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(testFramework_xunit)' == 'true'">
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="3.1.0">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-  </ItemGroup>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(testFramework_nunit)' == 'true'">
+		<PackageReference Include="NUnit" Version="3.13.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(testFramework_mstest)' == 'true'">
+		<PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
+		<PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
+	</ItemGroup>
 
 </Project>
