--- a/src/bunit.core/bunit.core.csproj
+++ b/src/bunit.core/bunit.core.csproj
@@ -37,9 +37,9 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0-preview.2.22152.2" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0-preview.2.22152.2" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.0-preview.2.22153.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet7Version)" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet7Version)" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet7Version)" />
 	</ItemGroup>
 
 </Project>
