--- a/.github/workflows/verification-nightly.yml
+++ b/.github/workflows/verification-nightly.yml
@@ -34,11 +34,18 @@ jobs:
           dotnet test ./tests/bunit.web.tests/bunit.web.tests.csproj -c release -f net7.0 --logger GitHubActions --blame-hang --blame-hang-timeout 1m --blame-hang-dump-type none
           dotnet test ./tests/bunit.web.testcomponents.tests/bunit.web.testcomponents.tests.csproj -c release -f net7.0 --logger GitHubActions --blame-hang --blame-hang-timeout 1m --blame-hang-dump-type none
 
+      - name: 🧾 Collect dotnet information
+        if: failure()
+        run: |
+          echo "DOTNET_VERSION=$(dotnet --version)" >> $GITHUB_ENV
+          echo $DOTNET_VERSION
+
       - name: ⚡ Create issue if failed
         if: failure()
         uses: JasonEtco/create-an-issue@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ADJECTIVE: DOTNET_VERSION
         with:
           filename: .github/nightly-failed.md
           update_existing: true
