--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -28,15 +28,15 @@ jobs:
       - name: ⚙️ Setup GIT versioning
         uses: dotnet/nbgv@v0.4.0
            
-      - name: ⚙️ Setup dotnet 5.0.x
-        uses: actions/setup-dotnet@v1
+      - name: ⚙️ Setup dotnet versions
+        uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '5.0.x'
-
-      - name: ⚙️ Setup dotnet 6.0.x
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.x
+          dotnet-version: |
+            3.1.x
+            5.0.x
+            6.0.x
+            7.0.x
+          include-prerelease: true
       
       - name: 🛠️ Update tokens in project files
         uses: cschleiden/replace-tokens@v1
