--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,15 +59,15 @@ jobs:
         with:
           setAllVars: true
 
-      - name: ⚙️ Setup dotnet 5.0.x
-        uses: actions/setup-dotnet@v1
+      - name: ⚙️ Setup dotnet versions
+        uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '5.0.x'
-
-      - name: ⚙️ Setup dotnet 6.0.x
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.x
+          dotnet-version: |
+            3.1.x
+            5.0.x
+            6.0.x
+            7.0.x
+          include-prerelease: true
 
       - name: 🛠️ Update changelog
         uses: thomaseizinger/keep-a-changelog-new-release@1.2.1
