feat: added color output on .net related actions

--- a/.github/workflows/verification-dotnet-nightly.yml
+++ b/.github/workflows/verification-dotnet-nightly.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: 🎨 Setup color
+        run: |
+          echo "DOTNET_SYSTEM_CONSOLE_ALLOW_ANSI_COLOR_REDIRECTION=1" >> $GITHUB_ENV
+          echo "TERM=xterm" >> $GITHUB_ENV
+
       - name: 📦 Setup nuget nightly builds
         run: |
           dotnet restore --verbosity normal -s https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet7/nuget/v3/index.json -s https://api.nuget.org/v3/index.json
