--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -69,6 +69,11 @@ jobs:
             6.0.x
             7.0.x
           include-prerelease: true
+      
+      - name: 🎨 Setup color
+        run: |
+          echo "DOTNET_SYSTEM_CONSOLE_ALLOW_ANSI_COLOR_REDIRECTION=1" >> $GITHUB_ENV
+          echo "TERM=xterm" >> $GITHUB_ENV
 
       - name: 🛠️ Building bUnit
         run: dotnet build /p:PublicRelease=true
