--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -37,6 +37,11 @@ jobs:
             6.0.x
             7.0.x
           include-prerelease: true
+          
+      - name: 🎨 Setup color
+        run: |
+          echo "DOTNET_SYSTEM_CONSOLE_ALLOW_ANSI_COLOR_REDIRECTION=1" >> $GITHUB_ENV
+          echo "TERM=xterm" >> $GITHUB_ENV
       
       - name: 🛠️ Update tokens in project files
         uses: cschleiden/replace-tokens@v1
