--- a/tests/bunit.core.tests/bunit.core.tests.csproj
+++ b/tests/bunit.core.tests/bunit.core.tests.csproj
@@ -12,4 +12,8 @@
 		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="TestDoubles\PersistentComponentState" />
+	</ItemGroup>
+
 </Project>
