--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -44,5 +44,9 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
 	</ItemGroup>
+
+	<ItemGroup Label="Git versioning">
+		<PackageReference Include="Nerdbank.GitVersioning" Version="3.5.103" PrivateAssets="All" />
+	</ItemGroup>
 	
 </Project>
