--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -2,10 +2,9 @@ name: release-preview
 concurrency: 'release-preview'
 
 on:
-  workflow_run:
-    branches: [ main ]
+  workflow_run:    
     workflows: [ 'verification' ]
-    types: [ completed ]
+    types: [completed]   
 
   workflow_dispatch:
     inputs:
@@ -16,7 +15,7 @@ on:
 
 jobs:
   release-preview:
-    if: github.event_name == 'workflow_dispatch' || ( github.ref == 'refs/heads/main' && ${{ github.event.workflow_run.conclusion == 'success' }} )
+    if: github.event_name == 'workflow_dispatch' || ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
     
