--- a/src/AngleSharpWrappers/AngleSharpWrappers.csproj
+++ b/src/AngleSharpWrappers/AngleSharpWrappers.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+		<IsPackable>false</IsPackable>
 		<RootNamespace>AngleSharpWrappers</RootNamespace>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<OutputType>Library</OutputType>
