--- a/src/bunit.web.testcomponents/bunit.web.testcomponents.csproj
+++ b/src/bunit.web.testcomponents/bunit.web.testcomponents.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
 		<RootNamespace>Bunit</RootNamespace>
 		<AssemblyName>Bunit.Web.TestComponents</AssemblyName>
 	</PropertyGroup>
@@ -12,38 +12,29 @@
 		<Description>
 			bUnit.web.testcomponents enables writing tests using the &lt;Fixture&gt; and &lt;SnapshotTest&gt; components in .razor files.
 
-This package only works with xUnit.
+			This package only works with xUnit.
 
-NOTE: This package represents experimental features of bUnit that has been superseded by better ones. It is provided to avoid breaking existing test suites but is unlikely to see improvements or updates in the future.
+			NOTE: This package represents experimental features of bUnit that has been superseded by better ones. It is provided to avoid breaking existing test suites but is unlikely to see improvements or updates in the future.
 		</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="SourceFileFinder" Version="1.1.0" />
-		<PackageReference Include="System.Reflection.Metadata" Version="$(DotNet5Version)" />
 		<PackageReference Include="xunit.assert" Version="2.4.1" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
 		<PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet3Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(DotNet3Version)" />
+		<PackageReference Include="System.Reflection.Metadata" Version="$(DotNet5Version)" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet5Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(DotNet5Version)" />
+		<PackageReference Include="System.Reflection.Metadata" Version="$(DotNet5Version)" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet6Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(DotNet6Version)" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet7Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(DotNet7Version)" />
+		<PackageReference Include="System.Reflection.Metadata" Version="$(DotNet6Version)" />
 	</ItemGroup>
 
 	<ItemGroup>
