build: cancel verification wf run if another is started on same pr/branch

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -15,6 +15,10 @@ on:
       - reopened
 
   workflow_dispatch:
+  
+concurrency:
+  group: verification-${{ github.ref }}-1
+  cancel-in-progress: true  
 
 jobs:
   verify-bunit:
