Revert AngleSharp from 1.0.1 to 0.17.1
This reverts commit 8ac537ae88575c967a98706b86f640e21e4bf710.

# Conflicts:
#	src/AngleSharpWrappers/AngleSharpWrappers.csproj
#	src/bunit.web/bunit.web.csproj

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -22,6 +22,7 @@
 		<AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<NoWarn>CA1014,NU5104</NoWarn>
+		<CheckEolTargetFramework>false</CheckEolTargetFramework>
 
 		<!-- Used by code coverage -->
 		<DebugType>full</DebugType>
