--- a/benchmark/bunit.benchmarks/bunit.benchmarks.csproj
+++ b/benchmark/bunit.benchmarks/bunit.benchmarks.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\bunit\bunit.csproj" />
       <ProjectReference Include="..\bunit.benchmarks.assets\bunit.benchmarks.assets.csproj" />
     </ItemGroup>
 
